load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "p4c_backend_lib",
    srcs = [
        "backend.cpp",
        "midend.cpp",
        "options.cpp",
    ],
    hdrs = [
        "backend.h",
        "midend.h",
        "options.h",
    ],
    deps = [
        "//simulator:ir_cc_proto",
        "@p4c//:ir_frontend_midend_control_plane",
        "@p4c//:lib",
        "@p4c//:p4c_backends_common_lib",
    ],
)

cc_binary(
    name = "p4c-4ward",
    srcs = ["main.cpp"],
    # p4include provides core.p4, v1model.p4, etc. The binary resolves them via
    # CONFIG_PKGDATADIR = "external/p4c+" (set at build time in config.h), so
    # the files must be present in the runfiles tree under that path.
    data = ["@p4c//:p4include"],
    visibility = ["//visibility:public"],
    deps = [
        ":p4c_backend_lib",
        "//simulator:ir_cc_proto",
        "@p4c//:ir_frontend_midend_control_plane",
        "@p4c//:lib",
    ],
)
