load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

# Shared command-line options struct used by both midend and backend.
cc_library(
    name = "options",
    srcs = ["options.cpp"],
    hdrs = ["options.h"],
    deps = ["@p4c//:ir_frontend_midend_control_plane"],
)

# p4c midend pipeline — simplification passes applied before the 4ward backend.
cc_library(
    name = "midend",
    srcs = ["midend.cpp"],
    hdrs = ["midend.h"],
    deps = [
        ":options",
        "@p4c//:ir_frontend_midend_control_plane",
    ],
)

# 4ward backend — walks post-midend IR and emits PipelineConfig.
# The only unit that touches protobuf / p4runtime directly.
cc_library(
    name = "backend",
    srcs = ["backend.cpp"],
    hdrs = ["backend.h"],
    deps = [
        ":options",
        "//simulator:ir_cc_proto",
        "@p4c//:ir_frontend_midend_control_plane",
        "@p4c//:lib",
        "@p4c//:p4c_backends_common_lib",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@protobuf",
    ],
)

cc_binary(
    name = "p4c-4ward",
    srcs = ["main.cpp"],
    # p4include provides core.p4, v1model.p4, etc. The binary resolves them via
    # CONFIG_PKGDATADIR = "external/p4c+" (set at build time in config.h), so
    # the files must be present in the runfiles tree under that path.
    data = ["@p4c//p4include"],
    visibility = ["//visibility:public"],
    deps = [
        ":backend",
        ":midend",
        ":options",
        "@p4c//:ir_frontend_midend_control_plane",
        "@p4c//:lib",
    ],
)
