load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")
load("@grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

# =============================================================================
# Dataplane gRPC service (packet injection + result observation)
# =============================================================================

proto_library(
    name = "dataplane_proto",
    srcs = ["dataplane.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//simulator:simulator_proto",
        "@p4runtime//proto/p4/config/v1:p4info_proto",
        "@p4runtime//proto/p4/v1:p4runtime_proto",
    ],
)

java_proto_library(
    name = "dataplane_java_proto",
    visibility = ["//visibility:public"],
    deps = [":dataplane_proto"],
)

cc_proto_library(
    name = "dataplane_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":dataplane_proto"],
)

cc_grpc_library(
    name = "dataplane_cc_grpc",
    srcs = [":dataplane_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":dataplane_cc_proto"],
)

java_grpc_library(
    name = "dataplane_java_grpc",
    srcs = [":dataplane_proto"],
    visibility = ["//visibility:public"],
    deps = [":dataplane_java_proto"],
)

kt_jvm_grpc_library(
    name = "dataplane_kt_grpc",
    srcs = [":dataplane_proto"],
    visibility = ["//visibility:public"],
    deps = [":dataplane_java_proto"],
)

# =============================================================================
# P4Runtime gRPC stubs (Kotlin)
# =============================================================================

# Java proto messages — needed as a dep for grpc stub generation.
java_proto_library(
    name = "p4runtime_java_proto",
    visibility = ["//visibility:public"],
    deps = ["@p4runtime//proto/p4/v1:p4runtime_proto"],
)

java_proto_library(
    name = "p4info_java_proto",
    visibility = ["//visibility:public"],
    deps = ["@p4runtime//proto/p4/config/v1:p4info_proto"],
)

# Java gRPC stubs for P4Runtime service.
java_grpc_library(
    name = "p4runtime_java_grpc",
    srcs = ["@p4runtime//proto/p4/v1:p4runtime_proto"],
    deps = [":p4runtime_java_proto"],
)

# Kotlin gRPC stubs — coroutine-based service base class and client stub.
kt_jvm_grpc_library(
    name = "p4runtime_kt_grpc",
    srcs = ["@p4runtime//proto/p4/v1:p4runtime_proto"],
    deps = [":p4runtime_java_proto"],
)

# =============================================================================
# P4Runtime server library
# =============================================================================

kt_jvm_library(
    name = "p4runtime_lib",
    srcs = glob(
        ["*.kt"],
        exclude = [
            "*Test.kt",
            "*TestHarness.kt",
            "*Benchmark.kt",
        ],
    ),
    visibility = ["//visibility:public"],
    deps = [
        ":constraint_validator_java_proto",
        ":dataplane_java_proto",
        ":dataplane_kt_grpc",
        ":p4info_java_proto",
        ":p4runtime_java_grpc",
        ":p4runtime_java_proto",
        ":p4runtime_kt_grpc",
        "//simulator:ir_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "//simulator:simulator_lib",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:io_grpc_grpc_netty",
        "@fourward_maven//:io_grpc_grpc_netty_shaded",
        "@fourward_maven//:io_grpc_grpc_stub",
        "@fourward_maven//:javax_annotation_javax_annotation_api",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)

kt_jvm_binary(
    name = "p4runtime_server",
    main_class = "fourward.p4runtime.P4RuntimeServerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":p4runtime_lib"],
)

# Self-contained fat JAR for distribution. Allows running the server with
# `java -jar p4runtime_server_jar_deploy.jar` without needing Bazel runfiles.
java_binary(
    name = "p4runtime_server_jar",
    main_class = "fourward.p4runtime.P4RuntimeServerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":p4runtime_lib"],
)

# =============================================================================
# Tests
# =============================================================================

kt_jvm_test(
    name = "P4RuntimeConformanceTest",
    srcs = [
        "P4RuntimeConformanceTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        "//e2e_tests/basic_table:basic_table_pb",
        "//e2e_tests/passthrough:passthrough_pb",
        "//e2e_tests/trace_tree:action_selector_3_pb",
        "//e2e_tests/trace_tree:clone_with_egress_pb",
    ],
    test_class = "fourward.p4runtime.P4RuntimeConformanceTest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "P4RuntimeWriteErrorTest",
    srcs = [
        "P4RuntimeTestHarness.kt",
        "P4RuntimeWriteErrorTest.kt",
    ],
    data = [
        "//e2e_tests/basic_table:basic_table_pb",
        "//e2e_tests/trace_tree:action_selector_3_pb",
    ],
    test_class = "fourward.p4runtime.P4RuntimeWriteErrorTest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_java_proto",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "GoldenErrorTest",
    srcs = [
        "GoldenErrorTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/basic_table:basic_table_pb",
        "//e2e_tests/constrained_table:constrained_table_pb",
        "//e2e_tests/golden_errors:action_profile_pb",
        "//e2e_tests/golden_errors:range_table_pb",
        "//e2e_tests/golden_errors:refers_to_pb",
        "//e2e_tests/golden_errors:stateful_pb",
        "//e2e_tests/golden_errors:value_set_pb",
        "//e2e_tests/lpm_routing:lpm_routing_pb",
        "//e2e_tests/ternary_acl:ternary_acl_pb",
        "//e2e_tests/trace_tree:action_selector_3_pb",
        "//e2e_tests/trace_tree:clone_with_egress_pb",
        "//e2e_tests/translated_type:translated_type_pb",
    ] + glob(["golden_errors/*.golden.txt"]),
    test_class = "fourward.p4runtime.GoldenErrorTest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_java_proto",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "WriteValidatorTest",
    srcs = ["WriteValidatorTest.kt"],
    test_class = "fourward.p4runtime.WriteValidatorTest",
    deps = [
        ":p4info_java_proto",
        ":p4runtime_java_proto",
        ":p4runtime_lib",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "EntityReaderTest",
    srcs = ["EntityReaderTest.kt"],
    test_class = "fourward.p4runtime.EntityReaderTest",
    deps = [
        ":p4info_java_proto",
        ":p4runtime_java_proto",
        ":p4runtime_lib",
        "//simulator:simulator_lib",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ReferenceValidatorTest",
    srcs = ["ReferenceValidatorTest.kt"],
    test_class = "fourward.p4runtime.ReferenceValidatorTest",
    deps = [
        ":p4info_java_proto",
        ":p4runtime_java_proto",
        ":p4runtime_lib",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "RoleMapTest",
    srcs = ["RoleMapTest.kt"],
    test_class = "fourward.p4runtime.RoleMapTest",
    deps = [
        ":p4info_java_proto",
        ":p4runtime_lib",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "TraceEnricherTest",
    srcs = ["TraceEnricherTest.kt"],
    test_class = "fourward.p4runtime.TraceEnricherTest",
    deps = [
        ":p4info_java_proto",
        ":p4runtime_java_proto",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "TypeTranslatorTest",
    srcs = ["TypeTranslatorTest.kt"],
    test_class = "fourward.p4runtime.TypeTranslatorTest",
    deps = [
        ":p4info_java_proto",
        ":p4runtime_java_proto",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ConstraintValidatorTest",
    srcs = ["ConstraintValidatorTest.kt"],
    data = [
        ":constraint_validator",
        "//e2e_tests/basic_table:basic_table_pb",
        "//e2e_tests/constrained_table:constrained_table_pb",
    ],
    test_class = "fourward.p4runtime.ConstraintValidatorTest",
    deps = [
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

# =============================================================================
# Constraint validator (p4-constraints subprocess)
# =============================================================================

proto_library(
    name = "constraint_validator_proto",
    srcs = ["constraint_validator.proto"],
    deps = [
        "@p4runtime//proto/p4/config/v1:p4info_proto",
        "@p4runtime//proto/p4/v1:p4runtime_proto",
    ],
)

java_proto_library(
    name = "constraint_validator_java_proto",
    deps = [":constraint_validator_proto"],
)

cc_proto_library(
    name = "constraint_validator_cc_proto",
    deps = [":constraint_validator_proto"],
)

cc_binary(
    name = "constraint_validator",
    srcs = ["constraint_validator.cpp"],
    copts = ["-std=c++20"],
    visibility = ["//visibility:public"],
    deps = [
        ":constraint_validator_cc_proto",
        "@p4_constraints//p4_constraints/backend:constraint_info",
        "@p4_constraints//p4_constraints/backend:interpreter",
    ],
)

# =============================================================================
# Tests
# =============================================================================

kt_jvm_test(
    name = "P4RuntimeServiceTest",
    srcs = [
        "P4RuntimeServiceTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    test_class = "fourward.p4runtime.P4RuntimeServiceTest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "P4RuntimeConstraintTest",
    srcs = [
        "P4RuntimeConstraintTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/basic_table:basic_table_pb",
        "//e2e_tests/constrained_table:constrained_table_pb",
    ],
    test_class = "fourward.p4runtime.P4RuntimeConstraintTest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "EnrichedTraceGoldenTest",
    srcs = [
        "EnrichedTraceGoldenTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        "enriched_trace.golden.txtpb",
        "//e2e_tests/translated_port:translated_port_pb",
    ],
    test_class = "fourward.p4runtime.EnrichedTraceGoldenTest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "P4RuntimeTranslationTest",
    srcs = [
        "P4RuntimeTestHarness.kt",
        "P4RuntimeTranslationTest.kt",
    ],
    data = [
        "//e2e_tests/translated_type:translated_type_pb",
    ],
    test_class = "fourward.p4runtime.P4RuntimeTranslationTest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "PacketBrokerTest",
    srcs = ["PacketBrokerTest.kt"],
    test_class = "fourward.p4runtime.PacketBrokerTest",
    deps = [
        ":p4runtime_lib",
        "//simulator:simulator_java_proto",
        "//simulator:simulator_lib",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "DataplaneServiceTest",
    srcs = [
        "DataplaneServiceTest.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        "//e2e_tests/basic_table:basic_table_pb",
        "//e2e_tests/passthrough:passthrough_pb",
    ],
    test_class = "fourward.p4runtime.DataplaneServiceTest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "PacketHeaderCodecTest",
    srcs = ["PacketHeaderCodecTest.kt"],
    test_class = "fourward.p4runtime.PacketHeaderCodecTest",
    deps = [
        ":p4info_java_proto",
        ":p4runtime_java_proto",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "DataplaneBenchmark",
    srcs = [
        "DataplaneBenchmark.kt",
        "P4RuntimeTestHarness.kt",
    ],
    data = [
        "//e2e_tests/sai_p4:sai_middleblock_pb",
    ],
    tags = ["heavy"],
    test_class = "fourward.p4runtime.DataplaneBenchmark",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "SaiP4E2ETest",
    srcs = [
        "P4RuntimeTestHarness.kt",
        "SaiP4E2ETest.kt",
    ],
    data = [
        "//e2e_tests/sai_p4:sai_middleblock_pb",
    ],
    test_class = "fourward.p4runtime.SaiP4E2ETest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_jvm_test(
    name = "SaiP4ConstraintTest",
    srcs = [
        "P4RuntimeTestHarness.kt",
        "SaiP4ConstraintTest.kt",
    ],
    data = [
        ":constraint_validator",
        "//e2e_tests/sai_p4:sai_middleblock_pb",
    ],
    test_class = "fourward.p4runtime.SaiP4ConstraintTest",
    deps = [
        ":dataplane_kt_grpc",
        ":p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:io_grpc_grpc_inprocess",
        "@fourward_maven//:io_grpc_grpc_kotlin_stub",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)
